# controllers/users.go
@@ -1,6 +1,7 @@
 package controllers
 
 import (
+	"fmt"
 	"net/http"
 
 	"github.com/STGPSYCHO/backend2023_task3/models"
@@ -11,18 +12,25 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+type Signin struct {
+	Login    string
+	Password string
+}
+
 // Register User
 //
-//		@Summary		GetBlog
-//		@Description	get blog by id
-//	 	@Param 			login path string true "Account ID"
-//	 	@Param			password path string true "Password"
-//		@Success		200		{integer}	integer	1
+//		@Summary		Register user
+//		@Description	Register my user
+//		@Accept json
+//		@Produce json
+//	 	@Param 			login body models.User true "Account ID"
+//	 	@Param			password body string true "Password"
+//		@Success		200		{string}	string
 //		@Failure		400,404	{object}	errorResponse
 //		@Failure		500		{object}	errorResponse
 //		@Failure		default	{object}	errorResponse
 //		@Router			/register [post]
-func Register(c *gin.Context) {
+func RegisterSwag(c *gin.Context) {
 	var user models.User
 	if err := c.ShouldBindJSON(&user); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
@@ -38,15 +46,6 @@ func Register(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{"message": "User registered successfully"})
 }
 
-// Login logic
-//
-//	 	@Param 			login path string true "Account ID"
-//	 	@Param			password path string true "Password"
-//		@Success		200		{integer}	integer	1
-//		@Failure		400,404	{object}	errorResponse
-//		@Failure		500		{object}	errorResponse
-//		@Failure		default	{object}	errorResponse
-//		@Router			/login-verification [post]
 func Login(c *gin.Context) {
 
 	var user models.User
@@ -82,6 +81,46 @@ func Login(c *gin.Context) {
 	}
 
 	c.Redirect(http.StatusMovedPermanently, "/api/blogs")
+}
+
+// Login logic
+//
+//		@Summary		Login user
+//		@Description	Login my user
+//		@Accept json
+//		@Produce json
+//	 	@Param 			login body models.User true "Account ID"
+//		@Success		200		{string}	string
+//		@Failure		400,404	{object}	errorResponse
+//		@Failure		500		{object}	errorResponse
+//		@Failure		default	{object}	errorResponse
+//		@Router			/login-verify [post]
+func LoginSwag(c *gin.Context) {
+
+	var user models.User
+
+	fmt.Print(c.Request.Body)
+
+	if err := c.ShouldBindJSON(&user); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	result := models.DB.Where("username = ? and password = ?", user.Username, user.Password).First(&user)
+	if result.Error != nil {
+		c.JSON(http.StatusNotFound, gin.H{"error": "User not found or invalid password"})
+		return
+	}
+	// bcrypt.CompareHashAndPassword([]byte(loginData.Password) ,[]byte(user.Password))
+
+	session := sessions.Default(c)
+	session.Set("user_id", user.ID)
+	if err := session.Save(); err != nil {
+		c.JSON(http.StatusForbidden, gin.H{"error": "Cannot save session"})
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{"message": "Successfully logged in"})
 }
 
 // Get /login
